@@ -6,8 +6,8 @@ baseUrl: archive.ubuntu.com
 
 # URL used for IP address lookup
 geoip:
-    style: "json"
-    url:   "https://ipapi.co/json"
+    style: "xml"
+    url:   "https://geoip.ubuntu.com/lookup"
 
 # Distribution that this is based off of.
 # This is so we can make safe assumptions for the contents of
