@@ -2,5 +2,5 @@
 baseUrl: archive.ubuntu.com
 distribution: Lubuntu
 geoip:
-    style: "json"
-    url:   "https://ipapi.co/json"
+    style: "xml"
+    url:   "https://geoip.ubuntu.com/lookup"
