@@ -1,6 +1,7 @@
 calamares-settings-ubuntu (1:23.10.4) UNRELEASED; urgency=medium
 
   * Remove the Partners repository as an option.
+  * Use geoip.ubuntu.com by default.
 
  -- Simon Quigley <tsimonq2@ubuntu.com>  Sun, 08 Oct 2023 11:53:28 -0500
 
